ADM-devops-assessment/config-as-code/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  namespace: devops-demo
  labels:
    app: devops-demo
spec:
  type: ClusterIP
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 80
      targetPort: http
